--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
 language: ruby
+cache: bundler
 rvm:
-  - 2.1.2
+  - 2.2.2
+  - 2.1.6
+  - 2.0.0
+  - 1.9.3
+  - jruby-19mode
+  - rbx-2.2.10
+  - jruby-head
+  - ruby-head
