--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: ruby
 cache: bundler
 rvm:
-  - 2.2.2
-  - 2.1.0
-  - rbx-2
+  - 2.4.1
+  - 2.3.4
   - jruby-head
   - ruby-head
+before_install:  # For jruby-head to work.
+  - gem install bundler
+  - gem update bundler
